--- a/src/package.json
+++ b/src/package.json
@@ -19,16 +19,19 @@
   "homepage": "https://github.com/brianeto/link-slider#readme",
   "devDependencies": {
     "autoprefixer": "7.2.4",
-    "gulp-postcss": "7.0.1",
+    "babel-core": "6.26.0",
+    "babel-preset-env": "1.6.1",
     "browser-sync": "2.18.13",
     "gulp": "3.9.1",
+    "gulp-babel": "7.0.1",
     "gulp-imagemin": "4.1.0",
+    "gulp-postcss": "7.0.1",
     "gulp-sass": "3.1.0",
     "gulp-sass-lint": "1.3.4",
-    "husky": "0.14.3",
+    "gulp-stylelint": "6.0.0",
     "gulp-uglify": "3.0.0",
+    "husky": "0.14.3",
     "jshint": "2.9.5",
-    "stylelint": "8.4.0",
-    "gulp-stylelint": "6.0.0"
+    "stylelint": "8.4.0"
   }
 }
